hphp/hack/test/typecheck/multiple_inheritance.php.exp
File "multiple_inheritance.php", line 6, characters 19-26:
A class may extend at most **one** other class. (Parsing[1002])
